[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = khartoum
author = YouGov, Plc.
author_email = open-source@yougov.com
description = A simple app for http serving of static files from MongoDB's GridFS filesystem.
long_description = file:README.rst
url = https://github.com/yougov/khartoum
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
python_requires = >=2.7
install_requires =
	PyYAML>=3.10
	gevent>=1.1b6,<2
	pymongo>=2.4,<3dev
	appsettings==0.3.2
	six
setup_requires = setuptools_scm >= 1.15.0

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-sugar >= 0.9.1
	collective.checkdocs
	pytest-flake8

	# local
	requests_toolbelt
	jaraco.mongodb
	pytest-services
	portend
	munch

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
